chore: Commit all outstanding changes
Includes various updates, bug fixes, and new features from multiple agents as per user request.

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,9 @@ ollama_setup.exe
 !models/
 !models/parties.json.example
 
+# Character profile backups
+models/character_backups/
+
 # Logs
 *.log
 logs/
