feat: add checkpoint resume infrastructure

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ CHUNK_LENGTH_SECONDS=600
 CHUNK_OVERLAP_SECONDS=10
 AUDIO_SAMPLE_RATE=16000
 
+# Audio snippet export
+CLEAN_STALE_CLIPS=true  # Remove old snippet WAV clips before reprocessing
+
 # Ollama settings (if using local LLM)
 # Recommended models:
 #   gpt-oss:20b  - OpenAI open-weight model, 12.8GB, 16GB RAM (BEST QUALITY)
