--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ OPENAI_API_KEY=
 # Model preferences
 WHISPER_MODEL=large-v3
 WHISPER_BACKEND=local  # Options: local, groq, openai
-LLM_BACKEND=ollama  # Options: ollama, openai
+# Whisper model settings
+WHISPER_MODEL_SIZE=medium
+WHISPER_LANGUAGE=en
+
 
 # Processing settings
 CHUNK_LENGTH_SECONDS=600
