fix: restore authenticated diarization and gpu defaults

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Optional API keys (leave empty to use local models only)
 GROQ_API_KEY=
 OPENAI_API_KEY=
+HF_TOKEN=
 
 # Model preferences
 WHISPER_MODEL=large-v3
@@ -8,6 +9,7 @@ WHISPER_BACKEND=local  # Options: local, groq, openai
 # Whisper model settings
 WHISPER_MODEL_SIZE=medium
 WHISPER_LANGUAGE=en
+INFERENCE_DEVICE=  # Options: cuda, cpu. Leave empty to auto-detect (prefers CUDA when available).
 
 
 # Processing settings
