feat: Improve diarization robustness and progress logging

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ WHISPER_BACKEND=local  # Options: local, groq, openai
 WHISPER_MODEL_SIZE=medium
 WHISPER_LANGUAGE=en
 INFERENCE_DEVICE=  # Options: cuda, cpu. Leave empty to auto-detect (prefers CUDA when available).
+PYANNOTE_DIARIZATION_MODEL=pyannote/speaker-diarization-3.1
+PYANNOTE_EMBEDDING_MODEL=pyannote/wespeaker-voxceleb-resnet34-LM
 
 
 # Processing settings
