feat(search): add session search functionality
Implements a new feature allowing users to search for text across all processed session transcripts.

- Creates a new SessionSearcher class in src/session_search.py to handle the search logic.
- Integrates the search functionality into the 'Stories & Output' tab of the Gradio UI, including a search bar, button, and results display.
- Adds a comprehensive suite of unit tests for the search functionality in 	ests/test_session_search.py.
- Updates IMPLEMENTATION_PLANS_PART2.md to document the new feature and mark it as complete.

This addresses the P2-SEARCH-001 task from the project roadmap.

chore: update project documentation and apply various fixes

- Updates IMPLEMENTATION_PLANS_PART4.md to refine the scope of the multi-language support task to Dutch and English.
- Updates docs/TESTING.md with the latest health check results, including FFmpeg, Ollama, and all Python package statuses.
- Includes various other updates to project files and documentation to reflect the current state of the project.

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ WHISPER_MODEL_SIZE=medium
 WHISPER_LANGUAGE=en
 INFERENCE_DEVICE=  # Options: cuda, cpu. Leave empty to auto-detect (prefers CUDA when available).
 PYANNOTE_DIARIZATION_MODEL=pyannote/speaker-diarization-3.1
-PYANNOTE_EMBEDDING_MODEL=pyannote/wespeaker-voxceleb-resnet34-LM
+PYANNOTE_EMBEDDING_MODEL=pyannote/embedding
 
 
 # Processing settings
@@ -22,6 +22,10 @@ AUDIO_SAMPLE_RATE=16000
 
 # Audio snippet export
 CLEAN_STALE_CLIPS=true  # Remove old snippet WAV clips before reprocessing
+
+# Logging
+LOG_LEVEL_CONSOLE=INFO  # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL_FILE=DEBUG    # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 
 # Ollama settings (if using local LLM)
 # Recommended models:
