chore: sync outstanding changes

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,9 @@ CLEAN_STALE_CLIPS=true  # Remove old snippet WAV clips before reprocessing
 # Logging
 LOG_LEVEL_CONSOLE=INFO  # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL_FILE=DEBUG    # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+AUDIT_LOG_ENABLED=true  # Disable (false) only for local experimentation
+AUDIT_LOG_ACTOR=local
+AUDIT_LOG_PATH=logs/audit.log
 
 # Ollama settings (if using local LLM)
 # Recommended models:
