fix: stabilize diarization embeddings and Ollama retries

--- a/.env.example
+++ b/.env.example
@@ -37,4 +37,6 @@ AUDIT_LOG_PATH=logs/audit.log
 #   llama3.2:3b  - Fastest, 2GB, 4GB RAM
 #   llama3.1:8b  - Good balance, 4.7GB, 8GB RAM
 OLLAMA_MODEL=gpt-oss:20b
+# Optional fallback when the primary model exceeds available memory (disabled by default).
+OLLAMA_FALLBACK_MODEL=
 OLLAMA_BASE_URL=http://localhost:11434
