feat(colab): Add Colab classification worker and setup
- Add Jupyter notebook for running classification tasks on Google Colab.

- Include a setup guide (COLAB_SETUP.md) for environment configuration.

- Add tests for the new Colab classifier functionality.

- Update .gitignore, config, and classifier to support the Colab environment.

--- a/.env.example
+++ b/.env.example
@@ -32,11 +32,11 @@ AUDIT_LOG_PATH=logs/audit.log
 
 # Ollama settings (if using local LLM)
 # Recommended models:
-#   gpt-oss:20b  - OpenAI open-weight model, 12.8GB, 16GB RAM (BEST QUALITY)
-#   qwen2.5:7b   - Best for Dutch, 4.7GB, 8GB RAM
-#   llama3.2:3b  - Fastest, 2GB, 4GB RAM
-#   llama3.1:8b  - Good balance, 4.7GB, 8GB RAM
-OLLAMA_MODEL=gpt-oss:20b
+#   qwen2.5:7b   - RECOMMENDED: Best for Dutch, 4.7GB, 8GB VRAM (Top-ranked 2025)
+#   llama3.2:8b  - Good balance, 4.7GB, 8GB VRAM
+#   llama3.2:3b  - Fastest, 2GB, 4GB VRAM
+#   gpt-oss:20b  - OpenAI open-weight, 12.8GB, 16GB+ VRAM (requires powerful GPU)
+OLLAMA_MODEL=qwen2.5:7b
 # Optional fallback when the primary model exceeds available memory (disabled by default).
 OLLAMA_FALLBACK_MODEL=
 OLLAMA_BASE_URL=http://localhost:11434
