--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ ENV/
 *.swo
 *~
 
+# Jupyter Notebooks
+*.ipynb
+!colab_classification_worker.ipynb
+
 # Project specific
 .env
 output/
@@ -81,3 +85,5 @@ docs/pipeline_flowchart.svg
 # Test data - generated during test runs
 models/knowledge/default_knowledge.json
 models/speaker_profiles.json
+
+.claude/settings.local.json
