test: add classification coverage

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,13 @@ AUDIT_LOG_ENABLED=true  # Disable (false) only for local experimentation
 AUDIT_LOG_ACTOR=local
 AUDIT_LOG_PATH=logs/audit.log
 
+# Classifier tuning
+CLASSIFIER_CONTEXT_MAX_SEGMENTS=11
+CLASSIFIER_CONTEXT_PAST_SECONDS=45
+CLASSIFIER_CONTEXT_FUTURE_SECONDS=30
+CLASSIFIER_AUDIT_MODE=0
+CLASSIFIER_PROMPT_PREVIEW_CHARS=256
+
 # Ollama settings (if using local LLM)
 # Recommended models:
 #   qwen2.5:7b   - RECOMMENDED: Best for Dutch, 4.7GB, 8GB VRAM (Top-ranked 2025)
